# engive

./: CMakeLists.txt
src/: main.cpp
src/ecs/: baseComponents.h  componentManager.h  entity.h
src/libs/glad/include/glad/: glad.h
src/libs/glad/src/: glad.c
src/render/: camera.h  colorRGBA.h  input.cpp  input.h  light.h  mesh.h  point.h  renderer.h  shader.h  shape.h
src/render/figure/: drawFigure.h  figure.h  shape.h
src/shaders/: poligon_color.frag  poligon_color.fs  poligon_color.vert  poligon_color.vs  poligon_texture.fs  poligon_texture.vert  poligon_texture.vs
